--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>508</width>
+    <width>586</width>
     <height>711</height>
    </rect>
   </property>
@@ -37,7 +37,7 @@
              </size>
             </property>
             <property name="text">
-             <string>\</string>
+             <string>/home/matt/Personal</string>
             </property>
             <property name="readOnly">
              <bool>true</bool>
@@ -118,7 +118,10 @@
               </size>
              </property>
              <property name="currentIndex">
-              <number>4</number>
+              <number>5</number>
+             </property>
+             <property name="maxVisibleItems">
+              <number>11</number>
              </property>
              <item>
               <property name="text">
@@ -341,7 +344,7 @@
               </size>
              </property>
              <property name="currentIndex">
-              <number>6</number>
+              <number>19</number>
              </property>
              <item>
               <property name="text">
@@ -477,7 +480,7 @@
            </size>
           </property>
           <property name="title">
-           <string>-</string>
+           <string>I/O</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
            <property name="leftMargin">
@@ -751,8 +754,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>508</width>
-     <height>21</height>
+     <width>586</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
